more work on topics

--- a/analysis/topics_for_popularity_cluster.ipynb
+++ b/analysis/topics_for_popularity_cluster.ipynb
@@ -27,7 +27,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 58
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
@@ -35,12 +35,13 @@
      "input": [
       "# bv_set = json.loads('[\"ephesians 2:8\", \"hebrews 13:16\", \"i_corinthians 13:4\", \"ii_chronicles 15:7\", \"isaiah 32:17\", \"james 1:19\", \"luke 6:27\", \"matthew 21:22\", \"matthew 5:8\", \"philippians 4:13\", \"proverbs 17:28\", \"revelation 1:8\"]')   \n",
       "bv_set = [\"john 15:13\"]\n",
-      "# bv_set = [\"john 13:7\", \"matthew 21:22\", \"philippians 4:13\"]"
+      "# bv_set = [\"john 13:7\", \"matthew 21:22\", \"philippians 4:13\"]\n",
+      "bv_set = [\"hebrews 11:1\", \"hebrews 13:5\", \"i_chronicles 16:34\", \"i_corinthians 13:4\", \"i_john 4:18\", \"i_peter 5:7\", \"ii_samuel 7:22\", \"ii_timothy 1:7\", \"isaiah 40:8\", \"jeremiah 29:11\", \"john 3:16\", \"john 3:17\", \"luke 6:27\", \"matthew 19:26\", \"matthew 22:37\", \"matthew 28:20\", \"matthew 7:8\", \"proverbs 11:25\", \"proverbs 12:19\", \"proverbs 13:3\", \"proverbs 15:1\", \"proverbs 17:17\", \"proverbs 27:2\", \"psalm 125:1\", \"psalm 33:12\", \"psalm 55:22\"]"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 59
+     "prompt_number": 66
     },
     {
      "cell_type": "code",
@@ -58,12 +59,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "['john 15:13'] 1\n",
-        "['john', '15', '13']\n"
+        "['hebrews 11:1', 'hebrews 13:5', 'i_chronicles 16:34', 'i_corinthians 13:4', 'i_john 4:18', 'i_peter 5:7', 'ii_samuel 7:22', 'ii_timothy 1:7', 'isaiah 40:8', 'jeremiah 29:11', 'john 3:16', 'john 3:17', 'luke 6:27', 'matthew 19:26', 'matthew 22:37', 'matthew 28:20', 'matthew 7:8', 'proverbs 11:25', 'proverbs 12:19', 'proverbs 13:3', 'proverbs 15:1', 'proverbs 17:17', 'proverbs 27:2', 'psalm 125:1', 'psalm 33:12', 'psalm 55:22'] 26\n",
+        "['hebrews', '11', '1', 'hebrews', '13', '5', 'i_chronicles', '16', '34', 'i_corinthians', '13', '4', 'i_john', '4', '18', 'i_peter', '5', '7', 'ii_samuel', '7', '22', 'ii_timothy', '1', '7', 'isaiah', '40', '8', 'jeremiah', '29', '11', 'john', '3', '16', 'john', '3', '17', 'luke', '6', '27', 'matthew', '19', '26', 'matthew', '22', '37', 'matthew', '28', '20', 'matthew', '7', '8', 'proverbs', '11', '25', 'proverbs', '12', '19', 'proverbs', '13', '3', 'proverbs', '15', '1', 'proverbs', '17', '17', 'proverbs', '27', '2', 'psalm', '125', '1', 'psalm', '33', '12', 'psalm', '55', '22']\n"
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 67
     },
     {
      "cell_type": "code",
@@ -86,13 +87,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 61,
+       "prompt_number": 68,
        "text": [
         "'2014-05-15'"
        ]
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 68
     },
     {
      "cell_type": "code",
@@ -119,7 +120,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 62
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
@@ -139,12 +140,83 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Total results john 15:13 128 docs\n",
-        "1959\n"
+        "Total results hebrews 11:1 101 docs\n",
+        "1956\n",
+        "Total results hebrews 13:5 69 docs\n",
+        "2236\n",
+        "Total results i_chronicles 16:34 28 docs\n",
+        "1780\n",
+        "Total results i_corinthians 13:4 103 docs\n",
+        "2084\n",
+        "Total results i_john 4:18 60 docs\n",
+        "1482\n",
+        "Total results i_peter 5:7 120 docs\n",
+        "1871\n",
+        "Total results ii_samuel 7:22 3 docs\n",
+        "327\n",
+        "Total results ii_timothy 1:7 72 docs"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "2063\n",
+        "Total results isaiah 40:8 24 docs\n",
+        "2019\n",
+        "Total results jeremiah 29:11 70 docs\n",
+        "1539\n",
+        "Total results john 3:16 54 docs\n",
+        "1852\n",
+        "Total results john 3:17 63 docs\n",
+        "2324\n",
+        "Total results luke 6:27 66 docs\n",
+        "1959\n",
+        "Total results matthew 19:26 106 docs"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "1595\n",
+        "Total results matthew 22:37 75 docs\n",
+        "2241\n",
+        "Total results matthew 28:20 55 docs\n",
+        "1043\n",
+        "Total results matthew 7:8 28 docs\n",
+        "2252\n",
+        "Total results proverbs 11:25 56 docs\n",
+        "1270\n",
+        "Total results proverbs 12:19 16 docs\n",
+        "1607\n",
+        "Total results proverbs 13:3 29 docs\n",
+        "2190\n",
+        "Total results proverbs 15:1 52 docs"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "1825\n",
+        "Total results proverbs 17:17 38 docs\n",
+        "2099\n",
+        "Total results proverbs 27:2 45 docs\n",
+        "1425\n",
+        "Total results psalm 125:1 13 docs\n",
+        "1529\n",
+        "Total results psalm 33:12 29 docs\n",
+        "2024\n",
+        "Total results psalm 55:22 50 docs\n",
+        "2399\n"
        ]
       }
      ],
-     "prompt_number": 63
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -158,7 +230,7 @@
       "# from __future__ import print_function\n",
       "\n",
       "n_samples = len(corpus)\n",
-      "n_features = 1000\n",
+      "n_features = 5000\n",
       "n_topics = 1 # len(corpus)\n",
       "print (\"n_topics\",n_topics)\n",
       "n_top_words = 3\n",
@@ -197,16 +269,23 @@
        "stream": "stdout",
        "text": [
         "('n_topics', 1)\n",
-        "['john', '15', '13']\n",
-        "num_feature_names 103\n",
-        "Fitting the NMF model on with n_samples=1 and n_features=1000...\n",
-        "Topic #0:\n",
-        "love, friends, greater love\n",
+        "['hebrews', '11', '1', 'hebrews', '13', '5', 'i_chronicles', '16', '34', 'i_corinthians', '13', '4', 'i_john', '4', '18', 'i_peter', '5', '7', 'ii_samuel', '7', '22', 'ii_timothy', '1', '7', 'isaiah', '40', '8', 'jeremiah', '29', '11', 'john', '3', '16', 'john', '3', '17', 'luke', '6', '27', 'matthew', '19', '26', 'matthew', '22', '37', 'matthew', '28', '20', 'matthew', '7', '8', 'proverbs', '11', '25', 'proverbs', '12', '19', 'proverbs', '13', '3', 'proverbs', '15', '1', 'proverbs', '17', '17', 'proverbs', '27', '2', 'psalm', '125', '1', 'psalm', '33', '12', 'psalm', '55', '22']\n",
+        "num_feature_names 100\n",
+        "Fitting the NMF model on with n_samples=26 and n_features=100...\n",
+        "Topic #0:"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "lord, god, love\n",
         "()\n"
        ]
       }
      ],
-     "prompt_number": 64
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
@@ -215,7 +294,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 64
+     "prompt_number": 71
     }
    ],
    "metadata": {}
